// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-table-toolbar-custom-action #render Should render as expected for "ghost" accent 1`] = `
<gux-table-toolbar-custom-action accent="ghost">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="ghost">
      <button type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span>
          <slot name="text">
          </slot>
        </span>
      </button>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;

exports[`gux-table-toolbar-custom-action #render Should render as expected for "primary" accent 1`] = `
<gux-table-toolbar-custom-action accent="primary">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="primary">
      <button type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span>
          <slot name="text">
          </slot>
        </span>
      </button>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;

exports[`gux-table-toolbar-custom-action #render Should render as expected for "secondary" accent 1`] = `
<gux-table-toolbar-custom-action accent="secondary">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="secondary">
      <button type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span>
          <slot name="text">
          </slot>
        </span>
      </button>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;

exports[`gux-table-toolbar-custom-action #render should render a toolbar-custom-action 1`] = `
<gux-table-toolbar-custom-action>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="secondary">
      <button type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span>
          <slot name="text">
          </slot>
        </span>
      </button>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;

exports[`gux-table-toolbar-custom-action #render should render disabled toolbar-custom-action 1`] = `
<gux-table-toolbar-custom-action disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="secondary">
      <button disabled="" type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span>
          <slot name="text">
          </slot>
        </span>
      </button>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;

exports[`gux-table-toolbar-custom-action #render should render icon-only toolbar-custom-action 1`] = `
<gux-table-toolbar-custom-action icon-only="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-button-slot accent="secondary">
      <button type="button" class="gux-action-title">
        <slot name="icon">
        </slot>
        <span class="gux-sr-only">
          <slot name="text">
          </slot>
        </span>
      </button>
      <gux-tooltip>
        <div slot="content">
          Filter
        </div>
      </gux-tooltip>
    </gux-button-slot>
  </template>
  <span slot="text">
    Filter
  </span>
  <gux-icon slot="icon" icon-name="filter" decorative="">
  </gux-icon>
</gux-table-toolbar-custom-action>
`;
